--- a/Frontend/CSS/style.css
+++ b/Frontend/CSS/style.css
@@ -33,9 +33,19 @@ h2 {
     font-size: 2rem;
 }
 
+.content-wrapper p {
+    margin-bottom: 1.5rem;
+    font-size: 1.2rem;
+    color: #004d40;
+    line-height: 1.5;
+}
+
 .button-group {
     display: flex;
-    gap: 1rem;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.5rem;
+    margin-top: 3rem;
 }
 
 .btn-landing {
