--- a/Frontend/CSS/customerlist.css
+++ b/Frontend/CSS/customerlist.css
@@ -40,7 +40,7 @@ body {
     margin-bottom: 1rem;
 }
 
-.btn-add, .btn-sync {
+.btn-add, .btn-sync, sort-button {
     padding: 0.5rem 1rem;
     border: none;
     border-radius: 4px;
@@ -75,7 +75,7 @@ body {
     font-size: 1rem;
     transition: background-color 0.3s, color 0.3s;
     cursor: pointer;
-    margin-left: 15rem;
+    margin-left: 5rem;
 }
 
 .btn-logout:hover {
@@ -290,4 +290,29 @@ body {
 
 .page-number:hover {
     background-color: #e9ecef;
+}
+
+
+/* Styling for the sort buttons */
+.sort-container {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.sort-button {
+    background-color: #00796b;
+    color: white;
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 6px;
+    text-decoration: none;
+    font-size: 1rem;
+    transition: background-color 0.3s, color 0.3s;
+    cursor: pointer;
+}
+
+.sort-button:hover {
+    background-color: #0044cc;
+    color: white;
 }
